# Witch

./: Cargo.toml  README.md
crates/witch/: Cargo.toml
crates/witch-compiler/: Cargo.toml
crates/witch-compiler/src/: error.rs  lib.rs  module.rs  types.rs
crates/witch-compiler/src/ast/: lexer.rs  mod.rs  parser.rs
crates/witch-compiler/src/compiler/: context.rs  mod.rs  pattern_matching.rs  type_system.rs  util.rs
crates/witch-compiler/src/parser/: ast.rs  expression.rs  lexer.rs  mod.rs  statement.rs  type.rs
crates/witch-compiler/tests/: it_compiles.rs
crates/witch-compiler/tests/fixtures/: .complex.witch.swp  arithmatics.w  complex.witch
crates/witch-macro/: Cargo.toml
crates/witch-macro/src/: lib.rs
crates/witch-parser/: Cargo.toml
crates/witch-parser/src/: ast.rs  error.rs  expression.rs  lexer.rs  lib.rs  pattern.rs  statement.rs  type.rs  types.rs
crates/witch-runtime/: Cargo.toml
crates/witch-runtime/src/: heap.rs  lib.rs  native_function.rs  pattern_matching.rs  stack.rs  value.rs  vm.rs
crates/witch-runtime/src/builtins/: conv.rs  mod.rs  sys.rs
crates/witch-std/: Cargo.toml  README.md
crates/witch-std/prelude/: main.witch
crates/witch-std/src/: lib.rs
crates/witch-std/witch/system/: system.witch
crates/witch/src/: bin.rs  lib.rs
crates/witch/tests/: it_compiles.rs  tests.rs
crates/witch/tests/fixtures/: basic.witch  builtins.witch  closures.witch  complex.witch  enums.witch  fib.witch  generic_functions.witch  lambda.witch  lists.witch  module.witch  sub_module.witch  types.witch
examples/tiny_runtime/: Cargo.toml
examples/tiny_runtime/src/: main.rs
examples/tinywitch/: Cargo.toml  Makefile  witch.c  witch.h
examples/tinywitch/src/: lib.rs
