[package]
name = "witch"
version = "0.1.0"
edition = "2018"

[lib]

[features]
default = ["compiler"]
compiler = ["dep:witch_compiler"]

[dependencies]
witch_compiler = { path = "../witch-compiler", optional = true }
witch_runtime = { path = "../witch-runtime" }


[dev-dependencies]
hashbrown = { version = "0.14", features = ["serde"] }