[package]
name = "tiny_runtime"
edition = "2021"
version = "0.1.0"

[dependencies.witch_runtime]
path = "../../crates/witch-runtime"
features = []
optional = false
default-features = false

[dependencies.libc]
version = "0.2"
features = []
optional = false
default-features = false

[dependencies.wee_alloc]
version = "0.4.5"
features = []
optional = false
default-features = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
lto = true
